--- a/sistema.html
+++ b/sistema.html
@@ -25,13 +25,13 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="arquitecturadistribuidasoftware-1.jpg" class="d-block w-100" alt="...">
+            <img src="./resources/arquitecturadistribuidasoftware-1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="PandoraSIEM-megamenu-hero.png" class="d-block w-100" alt="...">
+            <img src="./resources/PandoraSIEM-megamenu-hero.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="sistema-distribuido.png" class="d-block w-100" alt="...">
+            <img src="./resources/sistema-distribuido.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
