--- a/ventas.html
+++ b/ventas.html
@@ -37,7 +37,7 @@
       <br>
       <br>
       <br>
-      <img src="blog_Como_hacer_un_reporte_de_ventas6.png" alt="">
+      <img src="./resources/blog_Como_hacer_un_reporte_de_ventas6.png" alt="">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
