--- a/front.html
+++ b/front.html
@@ -1,34 +1,40 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="position-absolute top-0 end-0 m-3" id="botonregistro">
-      <button onclick="window.location.href='registro.html'" class="btn btn-primary w-55">Registrarse</button>
-    </div>
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-        <form id="formulario" class="p-4 border rounded" style="width: 50%;">
-            <div class="mb-3">
-              <label for="InputUsername" class="form-label">Username</label>
-              <input type="text" class="form-control" id="InputUsername" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="InputPassword">
-            </div>
-            <div class="mb-3 text-center">
-              <a href="recuperacion.html">Recuperar contraseña</a>
-            </div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-            </div>            
-          </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="position-absolute top-0 end-0 m-3" id="botonregistro">
+    <button onclick="window.location.href='registro.html'" class="btn btn-primary w-55">Registrarse</button>
+  </div>
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <form id="formulario" class="p-4 border rounded" style="width: 50%;">
+      <div class="mb-3">
+        <label for="InputUsername" class="form-label">Username</label>
+        <input type="text" class="form-control" id="InputUsername" aria-describedby="emailHelp">
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="InputPassword">
+      </div>
+      <div class="mb-3 text-center">
+        <a href="recuperacion.html">Recuperar contraseña</a>
+      </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+      </div>
+    </form>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
+</body>
+
 </html>
