--- a/recuperacion.html
+++ b/recuperacion.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperacion</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recuperacion</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-        <form id="formularioRecuperacion" class="p-4 border rounded" style="width: 50%;">
-            <div class="mb-3">
-              <h4>Le enviaremos la recuperacion de su contraseña a su correo electronico.</h4>
-              <label for="InputEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./recuperacion.js"></script>
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+    <form id="formularioRecuperacion" class="p-4 border rounded" style="width: 50%;">
+      <div class="mb-3">
+        <h4>Le enviaremos la recuperacion de su contraseña a su correo electronico.</h4>
+        <label for="InputEmail" class="form-label">Email</label>
+        <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./recuperacion.js"></script>
 </body>
+
 </html>
