--- a/front.html
+++ b/front.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="position-absolute top-0 end-0 m-3" id="botonregistro">
-    <button onclick="window.location.href='./public/registro.html'" class="btn btn-primary w-55">Registrarse</button>
+    <button onclick="window.location.href='/registro.html'" class="btn btn-primary w-55">Registrarse</button>
   </div>
   <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
     <form id="formulario" class="p-4 border rounded" style="width: 50%;">
